--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
 .idea
 *.out
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/CMakeFiles/3.19.2/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.19.2/CMakeRCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/CMakeCCompilerId.exe
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/CMakeCCompilerId.obj
+cmake-build-debug/CMakeFiles/clion-environment.txt
+cmake-build-debug/CMakeFiles/clion-log.txt
+cmake-build-debug/CMakeFiles/cmake.check_cache
+cmake-build-debug/CMakeFiles/CMakeDirectoryInformation.cmake
+cmake-build-debug/CMakeFiles/CMakeOutput.log
+cmake-build-debug/CMakeFiles/Makefile.cmake
+cmake-build-debug/CMakeFiles/Makefile2
+cmake-build-debug/CMakeFiles/progress.marks
+cmake-build-debug/CMakeFiles/Progress/2
+cmake-build-debug/CMakeFiles/Progress/count.txt
+cmake-build-debug/CMakeFiles/projet_patisier.dir/build.make
+cmake-build-debug/CMakeFiles/projet_patisier.dir/C.includecache
+cmake-build-debug/CMakeFiles/projet_patisier.dir/cmake_clean.cmake
+cmake-build-debug/CMakeFiles/projet_patisier.dir/depend.internal
+cmake-build-debug/CMakeFiles/projet_patisier.dir/depend.make
+cmake-build-debug/CMakeFiles/projet_patisier.dir/DependInfo.cmake
+cmake-build-debug/CMakeFiles/projet_patisier.dir/flags.make
+cmake-build-debug/CMakeFiles/projet_patisier.dir/objects1.rsp
+cmake-build-debug/CMakeFiles/projet_patisier.dir/progress.make
+cmake-build-debug/CMakeFiles/projet_patisier.dir/src/element-str.c.obj
+cmake-build-debug/CMakeFiles/projet_patisier.dir/vc140.pdb
+cmake-build-debug/CMakeFiles/TargetDirectories.txt
+cmake-build-debug/Makefile
+cmake-build-debug/projet_patisier.cbp
+cmake-build-debug/Testing/Temporary/LastTest.log
+CMakeLists.txt
